# silice-debugger

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  sourcePath.in
docs/: README.md
examples/: README.txt
examples/divint_bare/: main.ice.lpp
examples/divint_bare/BUILD_icarus/: build  build.v
examples/divstd_bare/: main.ice  main.ice.lpp
examples/divstd_bare/BUILD_icarus/: build  build.v  icarus.fst
examples/wolfpga/: wolfpga.ice.lpp
libs/: CMakeLists.txt
libs/implot/: CMakeLists.txt
src/: CMakeLists.txt  FSTReader.cpp  FSTReader.h  FSTWindow.cpp  FSTWindow.h  FileDialog.cpp  FileDialog.h  LogParser.cpp  LogParser.h  MainWindow.cpp  MainWindow.h  main.cpp  mainFST.cpp  sourcePath.h  test_editing.ice
src/FST/: DQPair.cpp  DQPair.h  FSTReader.cpp  FSTReader.h  Scope.cpp  Scope.h  Signal.cpp  Signal.h
src/ImGuiColorTextEdit/: CMakeLists.txt  TextEditor.cpp  TextEditor.h
src/TextEditor/: CMakeLists.txt  TextEditor.cpp  TextEditor.h
src/tests/: CMakeLists.txt  test-fstapi.cpp  test-fstapi.h
src/tinyfiledialogs/: CMakeLists.txt
